Inserção do frontend no projeto

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-/smart-campus
 /node_modules
+/docs
+/smart-campus/node_modules
+/smart-campus/dist
+/smart-campus/dist
+/smart-campus/tmp
+/smart-campus/out-tsc
+/smart-campus/chrome-profiler-events*.json
+/smart-campus/speed-measure-plugin*.json
+/smart-campus/.sass-cache
+/smart-campus/connect.lock
+/smart-campus/coverage
+/smart-campus/libpeerconnection.log
+/smart-campus/npm-debug.log
+/smart-campus/yarn-error.log
+/smart-campus/testem.log
+/smart-campus/typings
+/smart-campus/.git_old
+/smart-campus/.editorconfig
+/smart-campus/.gitignore_old
