--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.4"
   }
 }
