--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "",
-    "start": "cd smart-campus && ng build --prod &&  cd .. && node index.js"    
+    "start": "cd smart-campus && npm install && ng build --prod &&  cd .. && node index.js"    
   },
   "author": "",
   "license": "ISC",
